--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,41 @@
 .vscode/launch.json
 .vscode/ipch
 
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+.pio
+.vscode
+.DS_Store
+.pio/build/project.checksum
+.pio/build/m5stack-fire/idedata.json
